--- a/1.html
+++ b/1.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h1 class="text-center">Hello World</h1>
+    <h1 class="text-center">Hello World chỗ này tùng mới dc sửa</h1>
 
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
